tests/test_files_pa3/new/SemanticErrors/UnaryOpsBad3.ic
class A
{
	
	static void main(string[] args) { }

	bool ints(int x)
	{
		int z;
		boolean b;

		z = 
			-x;
		b = 
			-z;
		
		return b;
	}
}